# VoxPersona

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
scripts/: setup_models.py
src/voxpersona/: __init__.py  cli.py  config.py  pipeline.py
src/voxpersona/audio/: __init__.py  recorder.py
src/voxpersona/models/: __init__.py  f5_tts.py  qwen_chat.py  whisper_asr.py
tools/: extract_models_from_notebook.py
