[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voxpersona"
version = "0.1.0"
description = "Voice-first persona assistant: Whisper ASR + Qwen chat + optional F5-TTS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"torch>=2.2.0",
	"torchaudio>=2.2.0",
	"transformers>=4.47.0",
	"accelerate>=1.2.0",
	"sounddevice>=0.5.1",
	"soundfile>=0.12.1",
	"numpy>=1.26.0",
	"python-dotenv>=1.0.1",
	"huggingface-hub>=0.27.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
